bpo-37702: Fix SSL certificate-store-handles leak

In Windows, CertCloseStore(hCollectionStore) closes only hCollectionStore.
To avoid out-of-memory, CertCloseStore() shuld be called to each hSystemStore
which was added to hCollectionStore.